--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DSN="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
