--- a/authorization/.env.example
+++ b/authorization/.env.example
@@ -1,3 +1,4 @@
+APP_ENV=development
 DSN="host=localhost user=postgres password=postgres dbname=edugree_auth port=5432"
 SALT=salt
 JWT_LIFETIME=900
