--- a/authorization/config/rbac_model.conf
+++ b/authorization/config/rbac_model.conf
@@ -1,8 +1,8 @@
 [request_definition]
-r = sub, obj, act, domain
+r = sub, obj, act, dom
 
 [policy_definition]
-p = sub, obj, act, domain
+p = sub, obj, act, dom
 
 [role_definition]
 g = _, _, _
@@ -11,4 +11,4 @@ g = _, _, _
 e = some(where (p.eft == allow))
 
 [matchers]
-m = g(r.sub, p.sub, r.domain) && r.domain == p.domain && r.obj == p.obj && r.act == p.act
+m = g(r.sub, p.sub, r.dom) && r.dom == p.dom && r.obj == p.obj && r.act == p.act
