--- a/authorization/web/package.json
+++ b/authorization/web/package.json
@@ -13,7 +13,8 @@
     "pinia": "^2.0.32",
     "sass": "^1.58.3",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@heroicons/vue": "^2.0.16",
