--- a/authorization/web/.prettierrc
+++ b/authorization/web/.prettierrc
@@ -3,5 +3,6 @@
   "singleQuote": true,
   "useTabs": false,
   "trailingComma": "all",
-  "printWidth": 100
+  "printWidth": 100,
+  "tabWidth": 4
 }
