--- a/courses/composer.json
+++ b/courses/composer.json
@@ -5,12 +5,13 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.1",
+        "php": "^8.2",
         "firebase/php-jwt": "^6.4",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "php-amqplib/php-amqplib": "^3.5",
         "spatie/laravel-permission": "^5.10"
     },
     "require-dev": {
