--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.12",
+    "axios": "^1.3.6",
     "pinia": "^2.0.32",
     "sass": "^1.58.3",
     "vue": "^3.2.45",
