--- a/authorization/.env.example
+++ b/authorization/.env.example
@@ -13,3 +13,6 @@ RABBIT_HOST="localhost:5672"
 
 REDIS_HOST="localhost:6379"
 REDIS_PASSWORD=""
+
+APP_URL="http://localhost:7001"
+COURSE_URL="http://localhost:8000"
