--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "pinia": "^2.0.32",
     "sass": "^1.58.3",
     "vue": "^3.2.45",
+    "vue-advanced-cropper": "^2.8.8",
     "vue-router": "^4.1.6",
     "vue-toastification": "^2.0.0-rc.5"
   },
