add prometheus, proxy for frontend, jaeger

--- a/authorization/Dockerfile
+++ b/authorization/Dockerfile
@@ -9,5 +9,6 @@ COPY . .
 #RUN npm install ./cmd/migration
 #RUN npx prisma dev --name init --prefix ./cmd/migration
 RUN go build -o bin/auth/service ./cmd/auth-service
+#RUN go build -o bin/auth/service ./cmd/seeders
 EXPOSE 7001
 CMD ["./bin/auth/service"]
