--- a/authorization/.env.example
+++ b/authorization/.env.example
@@ -16,5 +16,6 @@ REDIS_PASSWORD=""
 
 APP_URL="http://localhost:7001"
 COURSE_URL="http://localhost:8000"
+SURVEY_URL="http://localhost:8001"
 
 PROMETHEUS_TOKEN="yyyy"
