configure docker and nginx

--- a/devops/nginx/default.conf
+++ b/devops/nginx/default.conf
@@ -1,21 +1,29 @@
-server {
-    server_name localhost;
-    root        /var/www/${RELATIVE_ROOT_PATH};
-    index       index.php;
-
-    client_max_body_size 256M;
-
-    add_header Content-Security-Policy upgrade-insecure-requests;
-
-    location / {
-        try_files $uri $uri/ /index.php?$query_string;
-    }
-
-    location ~ \.php$ {
-        include fastcgi_params;
-        fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
-        fastcgi_pass ${PHP_CONTAINER_NAME}:9000;
-        fastcgi_read_timeout 300;
-    }
+upstream php-fpm {
+    server php-next:9000;
+    server php:9000;
+    server php3:9000;
 }
+
+
+server {
+                listen 80;
+                server_name localhost;
+                root        /var/www/${RELATIVE_ROOT_PATH};
+                index       index.php;
+
+                location / {
+                    try_files $uri $uri/ /index.php?$query_string;
+                }
+
+                location ~ \.php$ {
+                    include fastcgi_params;
+                    fastcgi_ignore_client_abort on;
+#                    fastcgi_pass ${PHP_CONTAINER_NAME}:9001;
+                    fastcgi_pass php-fpm;
+                    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+                    fastcgi_param PATH_INFO $fastcgi_path_info;
+                }
+    }
+
+
+
