--- a/devops/php/Dockerfile
+++ b/devops/php/Dockerfile
@@ -11,7 +11,16 @@ RUN mv "$PHP_INI_DIR/$INI_NAME" "$PHP_INI_DIR/php.ini"
 
 RUN wget https://getcomposer.org/composer-stable.phar -O /usr/local/bin/composer && chmod +x /usr/local/bin/composer
 
+RUN install-php-extensions pdo_pgsql pgsql
+
 COPY ./custom.ini /usr/local/etc/php/conf.d/custom.ini
 COPY ./zz-docker.conf /usr/local/etc/php-fpm.d/zz-docker.conf
 
+RUN chown -R www-data:www-data /var/www
+
+
+
 WORKDIR /var/www
+
+#RUN chown -R 755 /var/www
+#RUN chown -R 755 /var/www/courses/bootstrap
