--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,36 @@
 version: "3.7"
 
 services:
-#  auth:
-#    build:
-#      context: ./authorization
-#      dockerfile: ./Dockerfile
-#    depends_on:
-#      - db
-#    ports:
-#      - 7001:7001
-#    networks:
-#      - app_network
+  auth:
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 256M
+    build:
+      context: ./authorization
+      dockerfile: ./Dockerfile
+    depends_on:
+      - db
+    ports:
+      - 7001:7001
+    networks:
+      - app_network
 
+  auth2:
+    deploy:
+      resources:
+        limits:
+          memory: 32M
+    build:
+      context: ./authorization
+      dockerfile: ./Dockerfile
+    depends_on:
+      - db
+    ports:
+      - 7002:7001
+    networks:
+      - app_network
 
   nginx-backend:
     image: nginx:1.19-alpine
@@ -35,9 +54,14 @@ services:
 #      - "traefik.http.middlewares.${COMPOSE_PROJECT_NAME}-nginx-https-only.redirectscheme.scheme=https"
 #      - "traefik.http.middlewares.${COMPOSE_PROJECT_NAME}-nginx-https-only.redirectscheme.permanent=true"
     networks:
-      - default
+      - app_network
 
   php:
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 256M
     build:
       context: ./devops/php
       args:
@@ -48,9 +72,50 @@ services:
       - ./courses:/var/www/courses
     working_dir: "/var/www/courses"
     networks:
-      - default
+      - app_network
     ports:
-      - 9000:9000
+      - 9002:9000
+
+  php-next:
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 256M
+    build:
+      context: ./devops/php
+      args:
+        - INI_NAME=php.ini-development
+    restart: always
+    user: "82:82"
+    volumes:
+      - ./courses:/var/www/courses
+    working_dir: "/var/www/courses"
+    networks:
+      - app_network
+    ports:
+      - 9001:9000
+
+  php3:
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 256M
+    build:
+      context: ./devops/php
+      args:
+        - INI_NAME=php.ini-development
+    restart: always
+    user: "82:82"
+    volumes:
+      - ./courses:/var/www/courses
+    working_dir: "/var/www/courses"
+    networks:
+      - app_network
+    ports:
+      - 9004:9000
+
 
   prometheus:
     image: prom/prometheus:v2.24.0
