change fpm conf

--- a/devops/php/zz-docker.conf
+++ b/devops/php/zz-docker.conf
@@ -3,7 +3,13 @@ daemonize = no
 
 [www]
 listen = 9000
-pm.max_children = 100
-pm.start_servers = 15
-pm.min_spare_servers = 10
-pm.max_spare_servers = 20
+pm = static
+pm.max_children = 6
+pm.start_servers = 2
+pm.min_spare_servers = 2
+pm.max_spare_servers = 4
+pm.max_requests = 50
+
+listen.owner = www-data
+listen.group = www-data
+listen.mode = 0777
