change configs to viper

--- a/devops/php/custom.ini
+++ b/devops/php/custom.ini
@@ -3,3 +3,5 @@ upload_max_filesize = 32M
 max_file_uploads = 20
 max_execution_time = 120
 memory_limit = 256M
+extension=pgsql.so
+;extension=pdo_pgsql.so
