--- a/devops/nginx/default.conf
+++ b/devops/nginx/default.conf
@@ -1,7 +1,9 @@
 upstream php-fpm {
-    server php-next:9000;
-    server php:9000;
-    server php3:9000;
+    least_conn;
+
+    server php:9000         weight=2;
+    server php-next:9000    ;
+    server php3:9000        ;
 }
 
 
