--- a/devops/nginx/default.conf
+++ b/devops/nginx/default.conf
@@ -2,14 +2,37 @@ upstream php-fpm {
     least_conn;
 
     server php:9000         weight=2;
-    server php-next:9000    ;
-    server php3:9000        ;
+}
+
+upstream php-surveys {
+    least_conn;
+
+    server php-surveys:9000;
+}
+
+server {
+                    listen 80;
+                    server_name surveys.loc;
+                    root        /var/www/${RELATIVE_ROOT_PATH};
+                    index       index.php;
+
+                    location / {
+                        try_files $uri $uri/ /index.php?$query_string;
+                    }
+
+                    location ~ \.php$ {
+                        include fastcgi_params;
+                        fastcgi_ignore_client_abort on;
+                        fastcgi_pass php-fpm;
+                        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+                        fastcgi_param PATH_INFO $fastcgi_path_info;
+                    }
 }
 
 
 server {
                 listen 80;
-                server_name localhost;
+                server_name courses.loc;
                 root        /var/www/${RELATIVE_ROOT_PATH};
                 index       index.php;
 
@@ -20,7 +43,6 @@ server {
                 location ~ \.php$ {
                     include fastcgi_params;
                     fastcgi_ignore_client_abort on;
-#                    fastcgi_pass ${PHP_CONTAINER_NAME}:9001;
                     fastcgi_pass php-fpm;
                     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
                     fastcgi_param PATH_INFO $fastcgi_path_info;
